--- a/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
+++ b/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
@@ -10,7 +10,9 @@
   width: 100%;
   margin: 0 auto;
   .dropmenu-user{
-      left: -20% !important;
+    left: -40% !important;
+    top: 30px !important;
+    transform: none !important;
   }
 }
 .mainbutton-fixed{
