--- a/src/containers/shared/Auth/Login/Login.scss
+++ b/src/containers/shared/Auth/Login/Login.scss
@@ -6,6 +6,7 @@
     box-shadow: 0 0 8px #95979d;
     padding: 20px 16px 24px;
     margin-top: 20px;
+    text-align: center;
   }
   .form__header {
     h4 {
