--- a/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
+++ b/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
@@ -76,8 +76,8 @@
 }
 #header-search {
   position: absolute;
-  top: 10%;
-  left: 15%;
+  top: 30px;
+  left: 200px;
   transition: left 0.8s;
   z-index: 2;
   display: flex;
