--- a/src/components/Header/HeaderNotLogin/headerNotLogin.scss
+++ b/src/components/Header/HeaderNotLogin/headerNotLogin.scss
@@ -1,10 +1,17 @@
+header {
+  position: absolute;
+  z-index: 2;
+  right:0
+}
+
 .header__content {
-  background-color: pink;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 10px;
   .header__icon {
     position: relative;
+    left: -210px;
     span {
       font-size: 70px;
       color: green;
@@ -13,7 +20,7 @@
       right: 20px;
     }
     img {
-      width: 100px;
+      width: 95px;
     }
   }
 
@@ -21,10 +28,10 @@
     display: flex;
     align-items: center;
     a {
-        color: white;
-        font-weight: bold;
-        padding: 0 10px;
-        font-size: 16px;
+      color: white;
+      font-weight: bold;
+      padding: 0 10px;
+      font-size: 16px;
     }
     .btn-navbar-join {
       button {
@@ -34,17 +41,17 @@
         padding: 5px 20px;
         font-weight: bold;
         transition: all 0.5s;
-        &:hover{
-            background-color: green;
+        &:hover {
+          background-color: green;
         }
       }
     }
 
-    .dropdown-menu-lastchild{
-        a{
-            color: black;
-            font-weight: bolder;
-        }
+    .dropdown-menu-lastchild {
+      a {
+        color: black;
+        font-weight: bolder;
+      }
     }
   }
 }
