--- a/src/helpers/mixin.scss
+++ b/src/helpers/mixin.scss
@@ -25,3 +25,11 @@
     @content;   
   } 
  }
+//carousel
+ @mixin herobackground($url) {
+    background-image: url($url);
+    height: 600px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
