--- a/src/helpers/variables.scss
+++ b/src/helpers/variables.scss
@@ -1,9 +1,34 @@
-//color
-$color-main-1: #181818;
-$color-main-2: #b61984;
-$color-main-3: #FFFFFF;
-$color-main-4: #DCD1F0;
-$color-main-5: #032055;
+//color light theme
+$color-main-1: #fff;
+$color-sideBar-1: #F1F1F1;
+$color-subSideBar-1: #e3e6e8;
+
+// color dark theme
+$color-main-2: #303548;
+$color-sideBar-2: #252938;
+$color-subSideBar-2: #2e3344;
+
+// color custom 1
+$color-main-3: #5093eb;
+$color-sideBar-3: #186fad;
+$color-subSideBar-3: #186fad;
+// color custom 2
+$color-main-4: #6673fc;
+$color-sideBar-4: #545ed6;
+$color-subSideBar-4: #545ed6;
+// color custom 3
+$color-main-5: #49d075;
+$color-sideBar-5: #3fa961;
+$color-subSideBar-5: #3fa961;
+// color custom 4
+$color-main-6: #e44f56;
+$color-sideBar-6: #b54b50;
+$color-subSideBar-6: #b54b50;
+
+//font color
+
+$font-color-1: #444;
+$font-color-2: #fff;
 
 //font size
 $fs-1: 15px;
