update title admin content

--- a/src/containers/admin/Header/AdminHeader.scss
+++ b/src/containers/admin/Header/AdminHeader.scss
@@ -1,6 +1,9 @@
 .AdminHeader {
-  // background-color: #fff;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000;
   margin: 0;
   border: 0;
   padding: 0;
