--- a/src/containers/admin/admin.scss
+++ b/src/containers/admin/admin.scss
@@ -4,8 +4,10 @@
 }
 .adminContainer-content{
   display: flex;
+  margin-top: 50px;
   .adminContent__sidebar{
-    width: 270px;
+    width: 240px;
+    flex-shrink: 0;
     display: block;
     min-height: calc(100vh - 50px);
     padding-top: 30px;
@@ -14,16 +16,18 @@
     width: 70px;
     transition: width .1s;
     &:hover{
-      width: 270px;
+      width: 240px;
       .adminSideBar.inFix {
           p{
-            display: block;
+            visibility: visible;
+            opacity: 1;
             transition-delay: .2s;
           }
           .Menucollapse{
             span{
               &:nth-of-type(2){
-                display: block;
+                visibility: visible;
+                opacity: 1;
                 transition-delay: .2s;
               }
             }
@@ -32,10 +36,11 @@
     }
   }
   .adminContent__main{
-    width: 100%;
+    flex-grow: 1;
     padding-left: 29px;
     padding-top: 30px;
     padding-right: 25px;
+    overflow-x: hidden;
   }
 }
 
