'fix-table-user'

--- a/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
+++ b/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
@@ -1,5 +1,5 @@
-#header-fixed{
-  display:block
+#header-fixed {
+  display: block;
 }
 
 #header__content-fixed {
@@ -13,70 +13,60 @@
   z-index: 2;
   width: 100%;
   margin: 0 auto;
-  .dropmenu-user{
+  .dropmenu-user {
     left: -40% !important;
     top: 30px !important;
     transform: none !important;
   }
 }
-.mainbutton-fixed{
-        margin-left: 60px;
-        width: 10px;
-        height: 10px;
-        background-color: green;
-        border: none;
-        border-radius: 50%;
+.mainbutton-fixed {
+  margin-left: 60px;
+  width: 10px;
+  height: 10px;
+  background-color: green;
+  border: none;
+  border-radius: 50%;
 }
 .header__icon-fixed {
-    position: absolute;
+  position: absolute;
 }
 
 .header__icon-fixed img {
   width: 90px;
 }
-.header__nav-fixed {
-  display: flex;
-  align-items: center;
-}
-.header__nav-fixed li {
-  display: inline;
-  padding: 0 6px;
-}
-.header__nav-fixed a {
-  font-weight: 600;
-  font-size: 16px;
-  color: #8e8f93;
-  padding: 7px;
-  transition: all 0.3s;
-}
-.header__nav-fixed .btn-dis-fixed-pro{
-    color: #02c2a9;
-}
-.header__nav-fixed a:hover {
-  color: #1dbf73;
-}
-.header__nav-fixed button {
-  background-color: rgba(255, 255, 255, 0);
-  border-radius: 4px;
-  font-weight: bold;
-  font-size: 14px;
-  border: 1px solid #1dbf73;
-  color: #1dbf73;
-  padding: 4px 20px;
-  transition: all 0.5s;
-}
-.header__nav-fixed button:hover {
-  background-color: green;
-  color: white;
-}
-.header__nav-fixed .dropdown-menu a {
-    display: block;
-    width: 90%;
-    margin: auto;
-    padding: 4px 26px;
-}
-.header__nav-fixed .lastchild-fixed a {
-  width: 300px;
+#header__content-fixed {
+  .header__nav {
+    display: flex;
+    align-items: center;
+    a {
+      color: gray;
+      font-weight: bold;
+      padding: 0 10px;
+      font-size: 16px;
+    }
+    .btn-navbar-join {
+      button {
+        background-color: transparent;
+        border: 1px solid green;
+        color:green;
+        border-radius: 7px;
+        padding: 3px 17px;
+        font-weight: bold;
+        transition: all 0.5s;
+        &:hover {
+          background-color: green;
+          color:white
+        }
+      }
+    }
+
+    .dropdown-menu-lastchild {
+      a {
+        color: black;
+        font-weight: bolder;
+      }
+    }
+  }
 }
 #header-search {
   position: absolute;
@@ -120,7 +110,7 @@
   background-color: white;
   padding: 5px 55px 0px 20px;
   border-top: 1px solid #a3a1a1;
-  border-bottom:  1px solid #a3a1a1;
+  border-bottom: 1px solid #a3a1a1;
   text-align: center;
   font-size: 16px;
   font-weight: bolder;
