add main job's type

--- a/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
+++ b/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
@@ -37,9 +37,9 @@
                 // width: 0px;
                 // opacity: 0;
             }
-            .ant-form-item-explain{
-                // opacity: 0;
-            }
+            // .ant-form-item-explain{
+            //     // opacity: 0;
+            // }
             .newJob__action{
                 margin-left: 10px;
             }
