--- a/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
+++ b/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
@@ -33,15 +33,41 @@
             input{
                 margin-right: 10px;
                 border-radius: 5px;
+                opacity: 0;
+                transform-origin: left center;
+                width: 200px;
                 padding: 5px 10px;
-                // width: 0px;
-                // opacity: 0;
+                transition: opacity .4s;
+                transition-delay: 0.4s;
             }
-            // .ant-form-item-explain{
-            //     // opacity: 0;
-            // }
             .newJob__action{
                 margin-left: 10px;
+            }
+            button.tyJobAddBtn, button.typeJobCancle{
+                transform-origin: center center;
+                transform: scale(0);
+                transition: transform .3s;
+            }
+            button.tyJobAddBtn{
+                transition-delay: 0.3s;
+            }
+            button.typeJobCancle{
+                transition-delay: 0.2s;
+            }
+        }
+        .newJob__context.show{
+            input{
+                opacity: 1;
+                transition-delay: 0s;
+            }
+            button.tyJobAddBtn, button.typeJobCancle{
+                transform: scale(1);
+            }
+            button.tyJobAddBtn{
+                transition-delay: 0.4s;
+            }
+            button.typeJobCancle{
+                transition-delay: 0.6s;
             }
         }
     }
@@ -50,22 +76,35 @@
     position: relative;
     //    background-color: rgba(220, 208, 208, 0.3);
     text-align: center;
+    &:hover{
+        .tabMainJob__editting{
+            opacity: 1;
+        }
+    }
     .tabMainJob__editting{
+        opacity: 0;
         display: flex;
         justify-content: center;
         align-items: center;
         overflow: hidden;
-        border-radius: 5px;
-        width: 100%;
-        height: 30px;
+        border-radius: 10px;
+        padding: 2px 3px;
+        height: 20px;
+        width: fit-content;
+        margin: auto;
+        margin-top: 5px;
+        box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
+        cursor: pointer;
         .editing__item{
             padding: 8px;
         }
         .editBtn{
-            background-color: #9FE080;
+            border-right: 1px solid rgba(220, 208, 208, 0.3);
         }
-        .deleteBtn{
-           background-color: #FF7070; 
+        .deleteBtn,.editBtn{
+            &:hover{
+                background-color: rgba(220, 208, 208, 0.3);
+            }
         }
     }
     .tabMainJob__title {
@@ -100,6 +139,7 @@
           justify-content: center;
           align-items: center;
           transition: width,height 0.2s;
+          transition-delay: 0.3s;
           button{
               border: none;
               margin: 0 3px;
@@ -115,13 +155,13 @@
       transition: box-shadow 0.3s;
       &:hover {
         box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
-        animation: wave .6s ease-out infinite;
       }
     }
     .tabMainJob__title.promptNote{
         .tabMainJob__overLay{
             width: 100%;
             height: 100%;
+            transition: width,height 0.2s;
             button{
                 margin-bottom: 0;
                 transition-delay: 0.5s; 
@@ -129,4 +169,15 @@
         }
     }
   }
+  .tabMainJob.editAfter{
+    &:hover{
+        .tabMainJob__editting{
+            opacity: 0;
+            }
+        }
+    }
+    .slick-arrow{
+        top: 40%!important;
+    }
 }
+
