--- a/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
+++ b/src/containers/admin/JobManagement/Statistics/MainJobList/MainJobList.scss
@@ -121,9 +121,12 @@
       p {
         margin-bottom: 0;
         font-weight: 600;
+        display: block;
+        min-width: 20px;
         &:focus-visible{
             outline: none;
             color: #FF7070;
+            cursor: text;
         }
       }
       .tabMainJob__overLay{
@@ -167,6 +170,12 @@
                 transition-delay: 0.5s; 
             } 
         }
+    }
+    .tabMainJob__title.error{
+        border: 2px solid #FF7070;
+    }
+    .tabMainJob__title.active{
+        box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 20%);
     }
   }
   .tabMainJob.editAfter{
