--- a/src/containers/admin/JobManagement/Statistics/ListSubJob/ListSubJob.scss
+++ b/src/containers/admin/JobManagement/Statistics/ListSubJob/ListSubJob.scss
@@ -1,101 +1,188 @@
-.subTypeJob-content{
-    position: relative;
-    margin-top: 20px;
-    .JobType-title{
-        position: absolute;
-        top: -17px;
-        left: 22px;
-        h4{
-            font-size: 20px;
-            font-weight: 500;
-            color: #000000d9;
+.subTypeJob-content {
+  position: relative;
+  margin-top: 20px;
+  .JobType-title {
+    position: absolute;
+    top: -17px;
+    left: 22px;
+    h4 {
+      font-size: 20px;
+      font-weight: 500;
+      color: #000000d9;
+      display: inline-block;
+      background-color: #fff;
+      padding: 0 8px;
+    }
+    p {
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      min-width: 100px;
+      margin-left: -1px;
+    }
+  }
+  .subJobType-item.disabled{
+      pointer-events:none;
+      opacity: 0.2;
+  }
+  .JobType-list {
+    border: 3px solid #888;
+    border-radius: 20px;
+    padding: 20px;
+    .subJobType__content {
+      padding-left: 20px;
+      margin-bottom: 10px;
+      font-size: 15px;
+      .subJobType__settingContent {
+        margin-right: 5px;
+        span {
+          vertical-align: 2px;
+          padding-left: 5px;
+          cursor: pointer;
+          &:nth-of-type(1) {
+            transform-origin: center center;
+            &:hover {
+              svg {
+                animation: turnArround 2s linear infinite;
+              }
+            }
+          }
+          &:nth-of-type(2) {
+            transform-origin: bottom center;
+            color: #ff7070;
+            &:hover {
+              animation: wave 0.6s ease-out infinite;
+            }
+          }
+          &:nth-of-type(3) {
+            color: #91cc75;
+            &:hover {
+              animation: wave 0.6s ease-out infinite;
+            }
+          }
+          &:nth-of-type(4) {
+            color: #ff7070;
+            &:hover {
+              animation: wave 0.6s ease-out infinite;
+            }
+          }
+          &:nth-of-type(1), &:nth-of-type(2){
             display: inline-block;
-            background-color: #fff;
-            padding: 0 8px;
+          }
+          &:nth-of-type(3), &:nth-of-type(4){
+            display: none;
+          }
         }
-        p{
+      }
+      .subJobType__settingContent.isEdit{
+        span{
+          &:nth-of-type(1), &:nth-of-type(2){
+            display: none;
+          }
+          &:nth-of-type(3), &:nth-of-type(4){
             display: inline-block;
+          }
+        }
+      }
+      .subJobType__title{
+        min-width: 30px;
+        border-radius: 5px;
+        &:focus-visible{
+          outline: none;
+          color: #73bfdd;
+        }
+      }
+      .subJobType__title.error{
+        border: 1px solid red;
+        padding: 0 10px;
+      }
+      .subJobType__title.remove{
+        text-decoration: line-through;
+      }
+    }
+    .subJobType-add {
+      cursor: pointer;
+      .subJobType__settingContent {
+        color: #73bfdd;
+        span {
+          &:hover {
+            animation: wave 0.6s ease-out infinite;
+            svg {
+              animation-play-state: paused;
+            }
+          }
+          &:nth-of-type(1) {
+            &:hover {
+              svg {
+                animation-play-state: paused;
+              }
+            }
+          }
+        }
+      }
+      .subJobType__title {
+        font-weight: 400;
+        color: #73bfdd;
+        position: relative;
+        p {
+          margin-bottom: 0;
+          position: relative;
+          opacity: 1;
+          z-index: 2;
+          transition: opacity 0.1s;
+        }
+        form {
             position: absolute;
-            top: 0;
-            min-width: 100px;
-            margin-left: -1px;
+            display: flex;
+            top: -5px;
+            left: 0;
+          .ant-form-item {
+            margin-bottom: 0;
+          }
+          input{
+              min-width: 180px;
+              opacity: 0;
+              z-index: -5;
+              transition: opacity 0.2s;
+          }
+          
         }
+      }
     }
-    .JobType-list{
-        border: 3px solid #888;
-        border-radius: 20px;
-        padding: 20px;
-        .subJobType__content{
-            padding-left: 20px;
-            margin-bottom: 10px;
-            font-size: 15px;
-            .subJobType__settingContent{
-                margin-right: 5px;
-                span{
-                    vertical-align: 2px;
-                    padding-left: 5px;
-                    cursor: pointer;
-                    &:nth-of-type(1){
-                        transform-origin: center center;
-                        &:hover{
-                            svg{animation: turnArround 2s linear infinite;}
-                        }
-                    }
-                    &:nth-of-type(2){
-                        transform-origin: bottom center;
-                        color: #FF7070;
-                        &:hover{
-                            animation: wave .6s ease-out infinite;
-                        }
-                    }
-                }
+    .subJobType-add.addnew {
+      .subJobType__settingContent {
+        span {
+          &:nth-of-type(1) {
+            color: #91cc75;
+          }
+          &:nth-of-type(2) {
+            color: #ff7070;
+          }
+        }
+      }
+      .subJobType__title {
+        font-weight: 400;
+        color: #73bfdd;
+        p {
+            opacity: 0;
+            z-index: -5;
+        }
+        form {
+            input{
+                opacity: 1;
+                z-index: 2; 
             }
         }
-        .subJobType-add{
-            cursor: pointer;
-            .subJobType__settingContent{
-                color: #73BFDD;
-                span{
-                    &:hover{
-                        animation: wave .6s ease-out infinite;
-                        svg{animation-play-state: paused;}
-                    }
-                    &:nth-of-type(1){
-                        &:hover{
-                            svg{animation-play-state: paused;}
-                        }
-                    }
-                } 
-            }
-            .subJobType__title{
-                font-weight: 400;
-                color: #73BFDD;
-            }
-        }
-        .subJobType-add.addnew{
-            .subJobType__settingContent{
-                span{
-                    &:nth-of-type(1){
-                        color: #91CC75;
-                    }
-                    &:nth-of-type(2){
-                        color: #FF7070;
-                    }
-                }
-            }
-            .subJobType__title{
-                font-weight: 400;
-                color: #73BFDD;
-            }
-        }
+      }
     }
+  }
 }
 
 @keyframes turnArround {
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
