--- a/src/components/Content/HomeLoggedIn/CarouselLoggedIn/carouselLoggedIn.scss
+++ b/src/components/Content/HomeLoggedIn/CarouselLoggedIn/carouselLoggedIn.scss
@@ -10,7 +10,7 @@
         text-align: center;
         padding:10px 20px;
         max-width:20%;
-        height:50vh;
+        height:225px;
         p{
             font-size:$fs-3;
             color:#62646a
@@ -50,7 +50,7 @@
             }
             img{
                 width:100%;
-                height:50vh
+                height:225px
             }
         }
     }
@@ -74,6 +74,7 @@
                
         }
     }
+    
 }
 .slick-dots li.slick-active button:before{
     color:white !important
