--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -31,3 +31,39 @@ footer ul {
   word-spacing: normal;
   padding-bottom: 16px;
 }
+
+footer {
+  .footer-mini-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 0;
+    border-top: 1px solid #e4e5e7;
+    .mini-left {
+      img {
+        width: 60px;
+        margin-right: 15px;
+      }
+      span {
+        color: #e4e5e7;
+        font-size: 16px;
+      }
+    }
+    .mini-right {
+      display: flex;
+      color: #7a7d85;
+      li {
+        display: inline;
+      }
+      .mini-logo {
+        li {
+          margin: 10px;
+        }
+      }
+      .mini-button {
+        li {
+          margin: 10px;
+        }
+      }
+    }
+  }
+}
