--- a/src/containers/admin/JobManagement/Statistics/ListSubJob/ListSubJob.scss
+++ b/src/containers/admin/JobManagement/Statistics/ListSubJob/ListSubJob.scss
@@ -36,6 +36,7 @@
       flex-wrap: nowrap;
       .subJobType__settingContent {
         margin-right: 5px;
+        min-width: 40px;
         span {
           vertical-align: 2px;
           padding-left: 5px;
@@ -88,7 +89,7 @@
       .subJobType__title{
         min-width: 30px;
         border-radius: 5px;
-        max-width: 185px;
+        max-width: 220px;
         &:focus-visible{
           outline: none;
           color: #73bfdd;
