--- a/src/components/Box/BoxTitle/BoxTitle.scss
+++ b/src/components/Box/BoxTitle/BoxTitle.scss
@@ -15,12 +15,27 @@
             cursor: pointer;
             svg{
                 transform-origin: center center;
-                transform: scale(0.8);
+                transform: scale(0.8) rotate(0deg);
                 transition: transform .3s;
             }
             &:hover{
                 svg{
                     transform: scale(1);
+                }
+            }
+        }
+    }
+    .boxTitle-icon.hiden{
+        span{
+            
+            &:nth-of-type(2){
+                svg{
+                    transform: scale(0.8) rotate(90deg);
+                }
+                &:hover{
+                    svg{
+                        transform: scale(1) rotate(90deg);
+                    }
                 }
             }
         }
