--- a/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
+++ b/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 25px;
-  position: fixed;
+  position: relative;
   // top: -120px;
   z-index: 2;
   width: 100%;
@@ -103,9 +103,8 @@
 #category__content {
   width: 100%;
   margin: 0 auto;
-  position: fixed;
-  display: none;
-  top: 80px;
+  position: relative;
+  top: 1px;
   z-index: 10;
   background-color: white;
   padding: 5px 55px 0px 20px;
