--- a/src/components/Box/Box.scss
+++ b/src/components/Box/Box.scss
@@ -18,7 +18,7 @@
     }
     .box-data__data.hiden{
         padding: 0 25px;
-        height: 0;
+        height: 0.125px;
     }
 }
 .box-data.fullScreen{
