--- a/src/containers/admin/JobManagement/EditJob/JobInfo/JobInfo.scss
+++ b/src/containers/admin/JobManagement/EditJob/JobInfo/JobInfo.scss
@@ -1,42 +1,46 @@
-.JobInfo{
-    .jobInfo__title{
+.JobInfo {
+  .jobInfo__title {
+    font-weight: 600;
+    color: #73bfdd;
+    font-size: 16px;
+    p {
+      margin-bottom: 2px;
+    }
+  }
+  .jobInfo__formContentItem {
+    .jobInfo__jobName {
+      input {
         font-weight: 600;
-        color: #73BFDD;
-        font-size: 16px;
-        p{
-            margin-bottom: 2px;
-        }
+        color: #888;
+        font-size: 18px;
+      }
     }
-    .jobInfo__formContentItem{
-        .jobInfo__jobName{
-            input{
-                font-weight: 600;
-                color: #888;
-                font-size: 18px;
-            }
-            
-        }
+  }
+  .jobInfo__nameUser {
+    font-weight: 600;
+    color: #ff7070;
+    font-size: 15px;
+  }
+  .form__Submit {
+    margin-top: 20px;
+    text-align: center;
+    .form__btn {
+      padding: 8px 15px;
+      font-weight: 600;
+      font-size: 15px;
+      color: #fff;
+      border: none;
+      border-radius: 20px;
+      margin: 0 10px;
+      &:hover {
+        box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
+      }
     }
-    .form__Submit{
-        margin-top: 20px;
-        text-align: center;
-        .form__btn{
-            padding: 8px 15px;
-            font-weight: 600;
-            font-size: 15px;
-            color: #fff;
-            border: none;
-            border-radius: 20px;
-            margin: 0 10px;
-            &:hover{
-                box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
-            }
-        }
-        .form__SubmitBtn{
-            background-color: #73BFDD;
-        }
-        .form__canceltBtn{
-            background-color: #FF7070;
-        }
+    .form__SubmitBtn {
+      background-color: #73bfdd;
     }
+    .form__canceltBtn {
+      background-color: #ff7070;
+    }
+  }
 }
