--- a/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
+++ b/src/components/Header/HeaderLoggedIn/headerLoggedIn.scss
@@ -5,7 +5,6 @@
   align-items: center;
   padding: 25px;
   position: relative;
-  // top: -120px;
   z-index: 2;
   width: 100%;
   margin: 0 auto;
@@ -33,6 +32,14 @@
   .header__nav-fixed {
     display: flex;
     align-items: center;
+
+    .avatar-mini{
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      cursor: pointer;
+    }
   }
   .header__nav-fixed li {
     display: inline;
