--- a/src/containers/admin/Header/AdminHeader.scss
+++ b/src/containers/admin/Header/AdminHeader.scss
@@ -100,6 +100,12 @@
       height: 30px;
       border-radius: 50%;
       border: 2px solid #ccc;
+      .notice{
+        width: 10px;
+        height: 10px;
+        top: 20px;
+        left: 0px;
+      }
     }
     .settingIcon {
       &:hover {
