--- a/src/containers/admin/JobManagement/EditJob/JobInfo/JobInfo.scss
+++ b/src/containers/admin/JobManagement/EditJob/JobInfo/JobInfo.scss
@@ -35,6 +35,9 @@
       &:hover {
         box-shadow: 0px 5px 25px 0px rgb(0 0 0 / 20%);
       }
+      span.anticon{
+        vertical-align: 0;
+      }
     }
     .form__SubmitBtn {
       background-color: #73bfdd;
