--- a/src/containers/home/homePage/profileUser/profileUser.scss
+++ b/src/containers/home/homePage/profileUser/profileUser.scss
@@ -208,12 +208,14 @@
         align-items: baseline;
         border-bottom: 1px solid #ddd;
         margin: 15px 0;
+        gap: 72px;
         button {
           color: #00698c;
           border: none;
           font-weight: 600;
           background-color: transparent;
           font-size: 14px;
+          margin-bottom: 10px;
         }
         input[type="text"] {
           border: none;
