--- a/src/containers/home/homePage/profileUser/createNewJobByUser/createNewJobByUser.scss
+++ b/src/containers/home/homePage/profileUser/createNewJobByUser/createNewJobByUser.scss
@@ -3,9 +3,11 @@
 .form-create-job-by-user {
   color: $color-nav-title;
   background-color: #f7f7f7;
+  padding-bottom: 150px;
+  position: relative;
   .content-create-job-by-user {
     width: 60%;
-    margin: 50px auto;
+    margin: 50px auto 0;
     background-color: white;
     border: 1px solid $color-cato-sub;
     padding: 20px;
@@ -48,27 +50,64 @@
         font-size: 16px;
       }
       .dragger-image {
-        .ant-form-item-control-input-content {
-          & > span {
-            display: flex;
+        display: flex;
+        gap: 60px;
+        .ant-upload-drag {
+          .ant-upload-btn {
+            padding: 16px;
           }
+        }
+        .ant-upload-list-picture-card {
+          display: none;
+        }
+      }
+      .ant-show-upload-image {
+        img {
+          width: 100vh;
+          object-fit: cover;
+          height: 100%;
+        }
+      }
+    }
+    //render done
+    .render-done {
+      .done-content {
+        margin: auto;
+        text-align: center;
+        width: 50%;
+        h3 {
+          color: #00668c;
+          font-size: 40px;
+          line-height: 120%;
+        }
+        p {
+          color: #404145;
+          font-weight: 700;
+          font-size: 24px;
+          line-height: 31px;
         }
       }
     }
   }
   .steps-action {
+    position: absolute;
+    bottom: 24px;
     text-align: center;
-    margin-bottom: 0px;
     padding-bottom: 40px;
     width: 60%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-around;
+    .ant-form-item-control-input-content {
+      display: flex;
+      justify-content: space-around;
+    }
     .btn-pre-steps {
       border-radius: 5px;
-      padding: 10px 35px 35px 35px;
+      padding: 0 35px;
       font-size: $fs-3;
+      background-color: $color-white;
+      height: 50px;
       font-weight: $fw-4;
       border: 1px solid $color-cato-sub;
       &:hover {
@@ -80,7 +119,8 @@
       border-radius: 5px;
       background-color: $color-green-all;
       color: $color-white;
-      padding: 10px 35px 35px 35px;
+      padding: 0 35px;
+
       font-size: $fs-3;
       font-weight: $fw-4;
       transition: all 0.2s;
