--- a/src/containers/home/homePage/profileUser/profileUser.scss
+++ b/src/containers/home/homePage/profileUser/profileUser.scss
@@ -221,7 +221,7 @@
           border: none;
           margin-bottom: 16px;
           color: $color-cato-title;
-          &:focus-visible{
+          &:focus-visible {
             outline: none;
           }
         }
@@ -249,59 +249,155 @@
   .profile-right {
     margin-top: 50px;
 
-    .buying-services {
-      border: 1px solid #ddd;
-      padding: 16px 16px 10px 32px;
-      display: flex;
-      background-color: $color-white;
-      justify-content: space-between;
-      img {
-        width: 60px;
-        height: 60px;
-        margin-top: 17px;
-      }
-      & > div {
-        padding: 0px 30px 0 17px;
-      }
-      p {
-        font-size: $fs-3;
+    .profile-right-content {
+      .buying-services {
+        border: 1px solid #ddd;
+        padding: 16px 16px 10px 32px;
+        display: flex;
+        background-color: $color-white;
+        justify-content: space-between;
+        img {
+          width: 60px;
+          height: 60px;
+          margin-top: 17px;
+        }
+        & > div {
+          padding: 0px 30px 0 17px;
+        }
+        p {
+          font-size: $fs-3;
 
-        &:last-child {
-          line-height: 1.75;
-          color: $color-green-all;
-          font-weight: $fw-3;
-          // &:hover{
-          //   border-bottom: 1px solid $color-green-all;
-          // }
+          &:last-child {
+            line-height: 1.75;
+            color: $color-green-all;
+            font-weight: $fw-3;
+            // &:hover{
+            //   border-bottom: 1px solid $color-green-all;
+            // }
+          }
+        }
+        span {
+          font-weight: $fw-4;
         }
       }
-      span {
-        font-weight: $fw-4;
+      .create-gig {
+        border: 1px solid #ddd;
+        justify-content: space-between;
+        display: flex;
+        padding: 20px 24px;
+        margin-top: 16px;
+        background-color: $color-white;
+        align-items: baseline;
+        p {
+          font-size: 15px;
+          margin-bottom: 0;
+        }
+        button {
+          background-color: $color-green-all;
+          color: white;
+          padding: 0 12px;
+          font-weight: $fw-4;
+          border-radius: 3px;
+          line-height: $fs-4;
+          font-size: 13px;
+          border: none;
+          &:hover {
+            opacity: 0.7;
+          }
+        }
       }
     }
-    .create-gig {
-      border: 1px solid #ddd;
-      justify-content: space-between;
-      display: flex;
-      padding: 20px 24px;
-      margin-top: 16px;
-      background-color: $color-white;
-      align-items: baseline;
-      p {
-        font-size: 15px;
-        margin-bottom: 0;
+    .profile-right-content-jobs {
+      .active-bars {
+        border: 1px solid #ddd;
+        background-color: $color-white;
+        width: 100%;
+        border-radius: 2px;
+        padding: 0 25px;
+        margin-bottom: 40px;
+        position: relative;
+        span {
+          padding: 23px 0;
+          margin-right: 35px;
+          font-size: 14px;
+          line-height: 130%;
+          font-weight: 600;
+          display: inline-block;
+          cursor: pointer;
+          color: #0e0e0f;
+          position: relative;
+          border-bottom: 4px solid $color-green-all;
+        }
       }
-      button {
-        background-color: $color-green-all;
-        color: white;
-        padding: 0 12px;
-        font-weight: $fw-4;
-        border-radius: 3px;
-        line-height: $fs-4;
-        font-size: 13px;
-        border: none;
-        &:hover {
-          opacity: 0.7;
+      .jobs-content {
+        row-gap: 30px;
+
+        .card {
+          .card-body {
+            padding: 5px 10px 10px;
+            h4.card-title {
+              font-size: 15px;
+              line-height: 140%;
+              font-weight: 600;
+              color: #303030;
+              overflow: hidden;
+              margin: 0;
+              -ms-word-wrap: break-word;
+              word-wrap: break-word;
+              -ms-word-break: break-word;
+              word-break: break-word;
+              -webkit-transition: 0.15s ease-in-out;
+              transition: 0.15s ease-in-out;
+              width: fit-content;
+              margin-bottom: 20px;
+              &:hover {
+                border-bottom: 1px solid $color-green-all;
+                color: $color-green-all;
+                cursor: pointer;
+              }
+            }
+            p.card-text {
+              color: $color-green-all;
+              font-size: 11px;
+              font-weight: 700;
+              text-transform: uppercase;
+              vertical-align: top;
+              padding: 1px 5px 0 0;
+              text-align: right;
+              span {
+                font-size: 18px;
+                line-height: 20px;
+                font-weight: 700;
+                padding: 0 6px ;
+              }
+            }
+          }
+          &:hover {
+            .card-title {
+              color: #19a463;
+            }
+          }
+        }
+        .create-new-gig{
+          position: relative;
+          text-align: center;
+          a{
+            margin: 42.5px 30px;
+            span{
+              border-radius: 50%;
+              background-color: #78cdd2;
+              font-size: 60px;
+              font-weight: 700;
+              color: white;
+              padding:0 25px 10px;
+            }
+            p{
+              color: $color-nav-title;
+              font-weight: 700;
+              margin-top: 20px;
+            }
+          }
+          
         }
       }
     }
